KUrlNavBtn: make opening subdirs from dropdown menu with the keyboard work

If the user invokes the sub-dirs dropdown menu, then uses e.g. the cursor
keys to selects a sub-dir, then press Enter, that sub-dir should be opened.

BUG: 428226
FIXED-IN: 5.77