src/filewidgets/kurlnavigatormenu_p.h
@@ -15,7 +15,7 @@ namespace KDEPrivate
 /**
  * @brief Provides drop-down menus for the URL navigator.
  *
- * The implementation extends KMenu with drag & drop support.
+ * The implementation extends QMenu with drag & drop support.
  *
  * @internal
  */
